; ModuleID = '/home/carl/AnghaBench/linux/fs/overlayfs/extr_util.c_ovl_inode_realdata.c'
source_filename = "/home/carl/AnghaBench/linux/fs/overlayfs/extr_util.c_ovl_inode_realdata.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.inode* @ovl_inode_realdata(%struct.inode* %0) #0 {
  %2 = alloca %struct.inode*, align 8
  %3 = alloca %struct.inode*, align 8
  %4 = alloca %struct.inode*, align 8
  store %struct.inode* %0, %struct.inode** %3, align 8
  %5 = load %struct.inode*, %struct.inode** %3, align 8
  %6 = call %struct.inode* @ovl_inode_upper(%struct.inode* %5)
  store %struct.inode* %6, %struct.inode** %4, align 8
  %7 = load %struct.inode*, %struct.inode** %4, align 8
  %8 = icmp ne %struct.inode* %7, null
  br i1 %8, label %9, label %15

9:                                                ; preds = %1
  %10 = load %struct.inode*, %struct.inode** %3, align 8
  %11 = call i64 @ovl_has_upperdata(%struct.inode* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %9
  %14 = load %struct.inode*, %struct.inode** %4, align 8
  store %struct.inode* %14, %struct.inode** %2, align 8
  br label %18

15:                                               ; preds = %9, %1
  %16 = load %struct.inode*, %struct.inode** %3, align 8
  %17 = call %struct.inode* @ovl_inode_lowerdata(%struct.inode* %16)
  store %struct.inode* %17, %struct.inode** %2, align 8
  br label %18

18:                                               ; preds = %15, %13
  %19 = load %struct.inode*, %struct.inode** %2, align 8
  ret %struct.inode* %19
}

declare dso_local %struct.inode* @ovl_inode_upper(%struct.inode*) #1

declare dso_local i64 @ovl_has_upperdata(%struct.inode*) #1

declare dso_local %struct.inode* @ovl_inode_lowerdata(%struct.inode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
